--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
           <li data-bs-target="#demo" data-bs-slide-to="0" class="active"></li>
           <li data-bs-target="#demo" data-bs-slide-to="1"></li>
           <li data-bs-target="#demo" data-bs-slide-to="2"></li>
+          <li data-bs-target="#demo" data-bs-slide-to="3"></li>
         </ul>
    
         <div class="carousel-inner" style="height: 400px">
